# phptgcalls

./: README.md  composer.json
example/: groupCalls.php  peerCall.php
ext/: Cargo.toml  build.rs  install.sh
ext/src/: helper.rs  lib.rs  tgcalls.rs
src/: Driver.php  Event.php  HandleUpdates.php  Wrapper.php  functions.php
src/Parsers/: BroadcastPart.php  BroadcastTimestamp.php  Connection.php  Frame.php  RemoteSource.php  Signaling.php  Stream.php  Upgrade.php
stubs/: README.md  tgcalls.php
