[package]
name = "phptgcalls"
version = "0.0.1"
edition = "2024"
description = "A PHP extension for tgcalls"
license = "GNU General Public License v3.0"
repository = "https://github.com/TakNone/phptgcalls"
readme = "README.md"
keywords = ["webrtc", "tgcalls", "rust", "php"]
build = "build.rs"

[[bin]]
name = "tgcalls"
path = "src/main.rs"

[lib]
name = "phptgcalls"
crate-type = ["cdylib", "rlib"]

[dependencies]
libc = "0.2"
colored = "3"
ext-php-rs = { version = "0.15.15", features = ["closure"] }
tokio = { version = "^1", features = ["full"] }
once_cell = "1.21"

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls-native-roots"] }
zip = "2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
lto = true # Enable Link-Time Optimization for better performance
codegen-units = 1 # Optimize for binary size
opt-level = "z" # Optimize for size